@@ -204,6 +204,10 @@
     group=plone_group
     backup=yes
   register: instance_status
+  
+- name: Check that buildout ran successfully
+  stat: path={{ plone_target_path }}/{{ plone_instance_name }}/bin/client_reserved
+  register: buildout_status
 
 
 ###################################
@@ -216,7 +220,7 @@
   sudo_user: plone_buildout
 
 - name: Run buildout
-  when: plone_autorun_buildout and instance_status.changed
+  when: plone_autorun_buildout and (instance_status.changed or buildout_status.stat.exists == False)
   command: bin/buildout
     chdir={{ plone_target_path }}/{{ plone_instance_name }}
   sudo_user: plone_buildout
